Before 32 bit Encryption Added button to the strip got copy, past, cut, undo working made new login menu changed name to CryptNote changed text andded Icon (need to change)

--- a/Journal/Journal/Info.resx
+++ b/Journal/Journal/Info.resx
@@ -117,63 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <data name="richTextBox1.Text" xml:space="preserve">
+    <value>
+
+
+
+
+CryptNote welcomes you to get into contact with us if you experance having any issues. Email us at s.settle@zerounderscorezero.com and we will get back to you as soon as possible.
+
+Defualt Password:   Admin
+Defualt UserName: Password
+
+Cryptnote is note the most secure source of encryption!</value>
+  </data>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAMAEBAQAAEABAAoAQAANgAAABAQAAABAAgAaAUAAF4BAAAQEAAAAQAgAGgEAADGBgAAKAAAABAA
-        AAAgAAAAAQAEAAAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAIAAAACAgACAAAAAgACAAICA
-        AACAgIAAwMDAAAAA/wAA/wAAAP//AP8AAAD/AP8A//8AAP///wAA///wAAAAAA93d38AAAAA93d3d///
-        ///3d3d3h3d3f/f///eHd3d/93d3d///93/3d3d3///3fw93d3////d/AP/4f///938AAPd////3fwAA
-        93////d/AAD3f//3d38AAPd///d38AAA93d3d38AAAD3d3d38AAAAP////8AAMH/AACA/wAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAACAAAAAwAAAAPAAAADwAAAA8AAAAPABAADwAwAA8AcAAPAPAAAoAAAAEAAAACAA
-        AAABAAgAAAAAAAABAAAAAAAAAAAAAAABAAAAAQAAAAAAAEJCQgB6enoAhoaGAJGRkQCzs7MAvr6+APHv
-        8ADz8fIA9PP0APX19QD4+PgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AAAACwoKCgsAAAAAAAAAAAAACgQBAQEECgAA
-        AAAAAAAACwQBAQEBAQQKCgoKCgoKCgoBAQEBAQEBBgEBAQEBAQoKAQcHBwcHAQUBAQEBAQEKCgEBAQEB
-        AQEKBwcHBwEBCgsEAQEBAQEECgcHBwcBAQoACgQBAQEECgcHBwcHAQEKAAALCgoGAgcHBwcHBwEBCgAA
-        AAAKAQEHBwcHBwcBAQoAAAAACgEBBwcHBwcHAQEKAAAAAAoBAQcHBwcBAQEDCgAAAAAKAQEHBwcHAQED
-        CgAAAAAACgEBAQEBAQEDCgAAAAAAAAoBAQEBAQEDCgAAAAAAAAAKCgoKCgoKCgAAAADB/wAAgP8AAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAgAAAAMAAAADwAAAA8AAAAPAAAADwAQAA8AMAAPAHAADwDwAAKAAAABAA
-        AAAgAAAAAQAgAAAAAABABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD29vYg9vb2r/b29v/29vb/9vb2//b2
-        9q/29vYgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD29vYg9vb275GRkf9CQkL/QkJC/0JC
-        Qv+RkZH/9vb27/b29iAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9vb2r5GRkf9CQkL/QkJC/0JC
-        Qv9CQkL/QkJC/5GRkf/29vb/9vb2//b29v/29vb/9vb2//b29v/29vb/9vb2//b29v9CQkL/QkJC/0JC
-        Qv9CQkL/QkJC/0JCQv9CQkL/vr6+/0JCQv9CQkL/QkJC/0JCQv9CQkL/QkJC//b29v/29vb/QkJC//Hv
-        8P/x7/D/8e/w//Hv8P/x7/D/QkJC/7Ozs/9CQkL/QkJC/0JCQv9CQkL/QkJC/0JCQv/29vb/9vb2/0JC
-        Qv9CQkL/QkJC/0JCQv9CQkL/QkJC/0JCQv/09PT/8e/w//Hv8P/x7/D/8e/w/0JCQv9CQkL/9vb2//b2
-        9q+RkZH/QkJC/0JCQv9CQkL/QkJC/0JCQv+RkZH/8/Hy//Hv8P/x7/D/8e/w//Hv8P9CQkL/QkJC//b2
-        9v/29vYg9vb275GRkf9CQkL/QkJC/0JCQv+RkZH/9PP0//Hv8P/x7/D/8e/w//Hv8P/x7/D/QkJC/0JC
-        Qv/29vb/AAAAAPb29iD29vav9vb2//b29v++vr7/enp6//Hv8P/x7/D/8e/w//Hv8P/x7/D/8e/w/0JC
-        Qv9CQkL/9vb2/wAAAAAAAAAAAAAAAAAAAAD29vb/QkJC/0JCQv/x7/D/8e/w//Hv8P/x7/D/8e/w//Hv
-        8P9CQkL/QkJC//b29v8AAAAAAAAAAAAAAAAAAAAA9vb2/0JCQv9CQkL/8e/w//Hv8P/x7/D/8e/w//Hv
-        8P/x7/D/QkJC/0JCQv/29vb/AAAAAAAAAAAAAAAAAAAAAPb29v9CQkL/QkJC//Hv8P/x7/D/8e/w//Hv
-        8P9CQkL/QkJC/0JCQv+Ghob/9vb27wAAAAAAAAAAAAAAAAAAAAD29vb/QkJC/0JCQv/x7/D/8e/w//Hv
-        8P/x7/D/QkJC/0JCQv+Ghob/9vb27/b29jAAAAAAAAAAAAAAAAAAAAAA9vb2/0JCQv9CQkL/QkJC/0JC
-        Qv9CQkL/QkJC/0JCQv+Ghob/9vb27/b29jAAAAAAAAAAAAAAAAAAAAAAAAAAAPb29v9CQkL/QkJC/0JC
-        Qv9CQkL/QkJC/0JCQv+Ghob/9vb27/b29jAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD29vb/9vb2//b2
-        9v/29vb/9vb2//b29v/29vb/9vb27/b29jAAAAAAAAAAAAAAAACA/wAAAH8AAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAIAAAADwAAAA8AAAAPAAAADwAAAA8AEAAPADAADwBwAA
-</value>
-  </data>
 </root>
